# Aniya

./: .gitignore  .gitmodules  README.md  flash.sh  partitions.csv  sdkconfig  sdkconfig.old
components/LovyanGFX/src/: LovyanGFX.hpp
components/LovyanGFX/src/lgfx/: v1_init.hpp
components/LovyanGFX/src/lgfx/v1/: LGFXBase.hpp
components/aniya_ble/: CMakeLists.txt  aniya_ble.c  hid_device_le_prf.c
components/aniya_ble/include/: aniya_ble.h
components/aniya_wifi/: CMakeLists.txt  aniya_wifi.c
components/aniya_wifi/include/: aniya_wifi.h
components/lvgl/demos/: lv_demos.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/MYUI/: myui.cpp  myui.h  myui_anim.cpp  myui_event.cpp  myui_task.cpp
main/MYUI/screens/: ui_ble_main.cpp  ui_clock_pointer_mian.cpp  ui_page_main.cpp
main/hal/: hal.cpp  hal.hpp  hal_config.h
main/hal/BMI270/: hal_BMI270.hpp
main/hal/disp/: hal_disp.hpp  hal_qdisp.hpp
main/hal/lvgl/: hal_lvgl.hpp
main/hal/rtc/: hal_rtc.hpp
main/hal/sd_card/: hal_sd_card.hpp
main/hal/tp/: hal_lcd_tp.hpp  hal_tp.hpp
main/squareline/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/squareline/components/: ui_comp_hook.c
main/squareline/fonts/: ui_font_Arcade80.c  ui_font_Point50.c  ui_font_Point70.c  ui_font_cat70.c  ui_font_mont80.c
main/squareline/images/: ui_img_1838330290.c  ui_img_1888405804.c  ui_img_749799162.c  ui_img_817053662.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_clockwise_sec_png.c  ui_img_thinking_256x256_png.c
